css/styles.css
/* ... */
.howitwork .howitworkitems-Text h6{
  padding-left: 40px;
  font-family: Proxima Nova;
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  display: flex;
  align-items: center;
  color: #878787;
}

.secondrow{
  position: relative;
  padding-top: 120px;
}

.howitworkcard{
  width: 631px;
  height: 520px;
  right: 0px;
  top: 117px;
  background: #FFFFFF;
}

.howitworkimg{
  background: url("../assets/svgs/Rectangle203.svg");
  background-position: center;
  background-repeat: no-repeat;
  width: 653px;
  height: 572px;
  border-radius: 8.59706px 0px 0px 8.59706px;
}
.howitworkcardtext{
  padding-top: 360px;
  padding-left: 150px;
}

.howitworkcardtext h5{
  font-family: Proxima Nova;
  font-style: normal;
  font-weight: 600;
  font-size: 20.2692px;
  line-height: 23px;
  display: flex;
  align-items: center;
  text-align: center;
  color: #FFFFFF;
}

.buttonclass{
  padding-left:60px;
}

.howitworkcardbutton{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 16.2154px 32.4308px;
  width: 201.68px;
  height: 54.73px;
  background: #F79020;
  border-radius: 8.10769px;
  color: #FFFFFF;
  font-family: Proxima Nova;
  font-style: normal;
  font-weight: 600;
  font-size: 16.2154px;
  line-height: 23px;
  display: flex;
}

.whyus{
  height: 613px;
  background: url("../assets/svgs/Rectangle205.svg");
  background-position: top left;
  background-repeat: no-repeat;
  background-size: 710px 575px;
}

.whyus .whyustext {
  font-family: Proxima Nova;
  font-style: normal;
  font-weight: bold;
  font-size: 42px;
  line-height: 48px;
  display: flex;
  align-items: center;
  color: #505050;
}

.whyus h6{
  top: 68px;
  font-family: Proxima Nova;
  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  line-height: 22px;
  display: flex;
  align-items: center;

  color: #505050;
  }

.whyusrighttext{
    margin-left: -10px;
  }

.whyusrighttext span{
  font-family: Proxima Nova;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
  display: flex;
  align-items: center;

  color: #505050;
}

.whyusbottom{
  position: relative;
  height: 1160px;
  background: url("../assets/svgs/group2.svg");
  background-position: bottom left;
  background-repeat: no-repeat;
  background-size: 100%;
  margin-top: -143px;
}

.whyuspadding{
  padding-top: 140px;
}

.corporateobjective{
  padding-bottom: 0px;
}

.corporateobjective .corporateobjectiverow{
  margin-bottom: 60px;
}

.corporateobjective h6{
  font-family: Proxima Nova;
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 29px;
  text-align: center;
  color: #505050;
}

.corporateobjective .corporateobjectivecardleft{
  width: 633px;
  height: 452.83px;
  left: 194px;
  top: 217px;
  background: #F3F3F3;
  border-radius: 7.70776px;
}

.corporateobjective .corporateobjectiveright{
  padding-top: 60px;
  margin-left: -120px;
}

.corporateobjective .corporateobjectivecardright{
  width: 609px;
  height: 463px;
  left: 730px;
  top: 257px;
  background: #FFFFFF;
  box-shadow: -4px 4px 4px rgba(177, 221, 206, 0.25);
  border-radius: 8px;
}

.corporateobjectivecardright .corporateobjectivetext{
  font-family: Proxima Nova;
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 29px;
  text-align: left;
  padding-left: 30px;
  color: #505050;
}

.corporateobjectiverighttext{
  margin-left: -10px;
  padding-left: 30px;
}

.corporateobjectiverighttext span{
  font-family: Proxima Nova;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
  color: #505050;
}

.testimonial{
  padding-left: 40px;
  margin-top: -360px;
  padding-bottom: 0px;
  margin-bottom: -120px;
}

.testimonialcontainer{
  height: 1000px;
  background: url("../assets/svgs/Layer2.svg"), linear-gradient(180deg, rgba(177, 221, 206, 0.2) -30.91%, rgba(0, 0, 0, 0) 77.17%), #FBFBFB;
  border-radius: 20px 0px 0px 20px;
}

.testimonial h2{
  font-family: Proxima Nova;
  font-style: normal;
  font-weight: bold;
  font-size: 42px;
  line-height: 51px;
  text-align: center;
  padding-top: 300px;
  color: #505050;
  margin-left: -270px;
  margin-bottom: 60px;
}

.testimonial .testimonialcard {
  position: absolute;
  left: 20.52%;
  right: 20.59%;
  top: 4000px;
  bottom: 16.03%;
  background: #FFFFFF;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 8px;
  height: 320px;
}

.testimonialcard .row{
  padding-top: 90px;
  padding-left: 60px;
}

.testimonialcard .row img{
  position: absolute;
  border-radius: 20px 0px 0px 20px;
}

.testimonialcard .row span, h6{
  position: absolute;
  padding-left: 210px;
  font-family: Proxima Nova;
  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  line-height: 22px;
  padding-top: 20px;
  color: #505050;
}

.testimonialcard .row p{
  position: absolute;
  padding-left: 210px;
  font-family: Proxima Nova;
  font-style: normal;
  font-size: 14px;
  line-height: 17px;
  padding-top: 20px;
  color: #505050;
}

.testimonial .ellipsis img{
  padding-top: 350px;
  margin-left: 720px;
}

.partner{
  padding-bottom: 0px;
  margin-bottom: 40px;
}

.partner h2{
  font-family: Proxima Nova;
  font-style: normal;
  font-weight: bold;
  font-size: 18px;
  line-height: 22px;
  text-align: center;
  color: #505050;
}

.partnercard{
  Width: 146.57px;
  Height: 101.83px;
  background: #FFFFFF;
  box-shadow: 0px 0px 4px rgba(205, 93, 227, 0.05);
  border-radius: 3.08571px;
  margin-right: 30px;
}

.register{
  height: 340px;
  background: url("../assets/svgs/Pattern.svg"),  #254828;
}

.register h2{
  font-family: Proxima Nova;
  font-style: normal;
  font-weight: bold;
  font-size: 24px;
  line-height: 35px;
  text-align: center;
  color: #FFFFFF;
}

.register .buttonclass{
  padding-left:520px;
}
/* ... */

